feat: add CI/CD pipeline with GitHub Actions and Spring Boot Actuator
- Add GitHub Actions workflow for CI/CD
- Include automated testing on push/PR
- Add deployment to Render after successful tests
- Add Spring Boot Actuator for health checks
- Configure secure health endpoint for production
- Add comprehensive deployment documentation

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -7,3 +7,7 @@ spring.sql.init.mode=always
 
 # H2 Console désactivée en production pour sécurité
 spring.h2.console.enabled=false
+
+# Actuator - exposer seulement health en production
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=when_authorized
