--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,12 @@ jobs:
         name: spring-boot-jar
         path: target/*.jar
         retention-days: 1
+        
+    - name: 🐳 Test Docker build
+      run: |
+        echo "🐳 Test de build Docker..."
+        docker build -t demo-spring-test .
+        echo "✅ Docker build réussi !"
 
   # ===== Phase CD : Déploiement sur Render =====
   deploy:
@@ -74,24 +80,44 @@ jobs:
     - name: 📥 Checkout code
       uses: actions/checkout@v4
       
-    - name: 🚀 Deploy to Render
-      uses: johnbeynon/render-deploy-action@v0.0.8
-      with:
-        service-id: ${{ secrets.RENDER_SERVICE_ID }}
-        api-key: ${{ secrets.RENDER_API_KEY }}
+    - name: 🚀 Deploy to Render via API
+      run: |
+        echo "🚀 Déclenchement du déploiement Render..."
+        response=$(curl -s -w "%{http_code}" -X POST \
+          -H "Accept: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+          "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys")
+        
+        http_code="${response: -3}"
+        if [ "$http_code" = "201" ]; then
+          echo "✅ Déploiement déclenché avec succès"
+        else
+          echo "❌ Erreur lors du déclenchement: $http_code"
+          echo "Response: ${response%???}"
+          exit 1
+        fi
         
     - name: ⏳ Wait for deployment
       run: |
-        echo "🔄 Déploiement en cours sur Render..."
-        sleep 60
+        echo "🔄 Attente du déploiement (90s)..."
+        sleep 90
         
     - name: 🔍 Health check
       run: |
         echo "🩺 Vérification de l'API..."
-        # Remplacez YOUR_RENDER_URL par votre vraie URL Render
-        curl -f "${{ secrets.RENDER_URL }}/actuator/health" || echo "⚠️ Health check failed"
+        for i in {1..5}; do
+          if curl -f "${{ secrets.RENDER_URL }}/actuator/health"; then
+            echo "✅ API déployée avec succès !"
+            exit 0
+          else
+            echo "⚠️ Tentative $i/5 échouée, retry dans 30s..."
+            sleep 30
+          fi
+        done
+        echo "❌ Health check failed après 5 tentatives"
+        exit 1
 
-  # ===== Phase optionnelle : Tests d'intégration post-déploiement =====
+  # ===== Tests d'intégration post-déploiement =====
   integration-tests:
     name: 🔗 Integration Tests
     runs-on: ubuntu-latest
@@ -99,9 +125,6 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v4
-      
     - name: 🧪 Test API endpoints
       run: |
         echo "🔍 Test des endpoints API..."
