--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,14 +44,27 @@ jobs:
     - name: 🧪 Run tests
       run: ./mvnw test -B -ntp
       
-    - name: 📊 Generate test report
-      uses: dorny/test-reporter@v1
+    - name: 📊 Test Results Summary
       if: always()
-      with:
-        name: 📋 Maven Tests Report
-        path: target/surefire-reports/*.xml
-        reporter: java-junit
-        fail-on-error: true
+      run: |
+        echo "📋 Résumé des tests Maven :"
+        if [ -f "target/surefire-reports/TEST-*.xml" ]; then
+          echo "✅ Fichiers de rapport de tests trouvés"
+          tests=$(grep -o 'tests="[0-9]*"' target/surefire-reports/TEST-*.xml | head -1 | grep -o '[0-9]*')
+          failures=$(grep -o 'failures="[0-9]*"' target/surefire-reports/TEST-*.xml | head -1 | grep -o '[0-9]*')
+          errors=$(grep -o 'errors="[0-9]*"' target/surefire-reports/TEST-*.xml | head -1 | grep -o '[0-9]*')
+          echo "📊 Tests exécutés: $tests"
+          echo "❌ Échecs: $failures"
+          echo "⚠️ Erreurs: $errors"
+          if [ "$failures" = "0" ] && [ "$errors" = "0" ]; then
+            echo "🎉 Tous les tests sont passés !"
+          else
+            echo "💥 Des tests ont échoué"
+            exit 1
+          fi
+        else
+          echo "⚠️ Aucun rapport de test trouvé"
+        fi
         
     - name: 🔧 Build JAR
       run: ./mvnw package -DskipTests -B -ntp
